// Distributed under the MIT software license, see the accompanying
// file LICENSE or http://www.opensource.org/licenses/mit-license.php.

syntax = "proto3";

option go_package = "github.com/theQRL/zond/protos";

package protos;

import "protos/transaction.proto";

message BlockHeader {
    uint64 slot_number = 1;
    bytes hash = 2;
    bytes parent_hash = 3;

    uint64 base_fee = 4;
    uint64 gas_limit = 5;
    uint64 gas_used = 6;
    uint64 timestamp_seconds = 7;

    bytes root = 8;
    bytes transactions_root = 9;
    bytes receipts_root = 10;

    bytes protocol_tx_bloom = 11;
    bytes tx_bloom = 12;
}

message Block {
    BlockHeader header = 1;
    repeated ProtocolTransaction protocol_transactions = 2;
    repeated Transaction transactions = 3;
}
